--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -1,3 +1,23 @@
 .divider {
     padding: 2em 0;
 }
+
+.info-text {
+    font-size: 8px;
+}
+
+.weather-img {
+    max-width: 100px;
+    max-height: 100px;
+    margin: 0 auto;
+    padding: 1em;
+}
+
+.content-main {
+    font-size: 10px;
+}
+
+.location-card {
+    max-width: 250px;
+    margin: 0 auto;
+}
