--- a/src/app/main-view/main-view.component.html
+++ b/src/app/main-view/main-view.component.html
@@ -3,6 +3,12 @@
   <mat-card-subtitle>The first one the world has ever seen</mat-card-subtitle>
   <mat-card-content>
     <input matInput placeholder="Search for a location" [(ngModel)]="searchTerm">
+    <br />
+    <mat-list>
+        <mat-list-item *ngFor="let location of searchResults">
+          <p class="search-result">{{location.title}}</p>
+        </mat-list-item>
+    </mat-list>
   </mat-card-content>
   <mat-card-actions>
       <button mat-button (click)="searchForLocation()">Search</button>
