--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -6,6 +6,11 @@
     font-size: 8px;
 }
 
+.search-result {
+    font-size: 10px;
+    color: black;
+}
+
 .weather-img {
     max-width: 100px;
     max-height: 100px;
